--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 <li><a href="#about">About</a></li>
 <li><a href="#education">Education</a></li>
 <li><a href="#skills">Skills</a></li>
-<li><a href="#projects">Projects</a></li>
 <li><a href="#resume">Resume</a></li>
 </ul>
 </nav>
 <section id="about">
 <div class="section-content">
 <h2>About Me</h2>
-<p>Hello Everyone! This is Roslin Benitta and i am a BCA Mentor.</p>
+<p>Hello Everyone! This is Roslin Benitta and i am a BCA Student.</p>
 </div>
 </section>
 <section id="education">
@@ -40,16 +39,6 @@
 <li>Html</li>
 <li>Operating System</li>
 <li>Python</li>
-</ul>
-</div>
-</section>
-<section id="projects">
-<div class="section-content">
-<h2>Projects</h2>
-<ul>
-<li><a href="#">Project 1</a></li>
-<li><a href="#">Project 2</a></li>
-<!-- Add more project links here -->
 </ul>
 </div>
 </section>
